syntax = "proto3";

package price.v1;

import "google/protobuf/timestamp.proto";

service PriceService {
  rpc AddTicker(AddTickerRequest) returns (AddTickerResponse);
  rpc RemoveTicker(RemoveTickerRequest) returns (RemoveTickerResponse);
  rpc StreamPrices(StreamPricesRequest) returns (stream PricePoint);
}

message StreamPricesRequest {
  string client_id = 1;                      // opaque UUID per tab
  repeated string initial_symbols = 2;       // optional bootstrap list
}

message AddTickerRequest {
  string client_id = 1;
  string symbol = 2;                         // e.g., BTCUSD
}

message RemoveTickerRequest {
  string client_id = 1;
  string symbol = 2;
}

message AddTickerResponse {
  bool success = 1;
  string error_message = 2;
  PricePoint initial_price = 3;              // optional snapshot
}

message RemoveTickerResponse {
  bool success = 1;
  string error_message = 2;
}

message PricePoint {
  string symbol = 1;
  string price_string = 2;                   // keep precision
  google.protobuf.Timestamp ts = 3;
}


